# STM32H743_template_ATfE

./: .clang-format  .gitignore  .mxproject  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  README_ch.md  README_en.md  STM32H743IIT6.ioc  STM32H743XX_FLASH.ld  graduate_project.code-workspace
Core/: CMakeLists.txt
Core/Inc/: fmc.h  ltdc.h  main.h  stm32h7xx_hal_conf.h
Core/Src/: fmc.c  gpio.c  ltdc.c  main.c  stm32h7xx_it.c  usart.c
Drivers/: CMakeLists.txt
User_Drivers/: CMakeLists.txt
User_Drivers/Inc/: lcd_show.h  lcd_test.h  sdram.h
User_Drivers/Src/: lcd_fonts.c  lcd_image.c  lcd_show.c  lcd_test.c  sdram.c  touch_800x480.c  touch_iic.c
__cmake_systeminformation/: CMakeCache.txt
cmake/: ATfE.cmake
cmake/stm32cubemx/: CMakeLists.txt
lvgl-8.3.10/: CMakeLists.txt  lv_conf.h
lvgl-8.3.10/porting/: lv_port_disp.c
